--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                     <li><i class="bi bi-chevron-right"></i> <strong>Tug'ilgan kun:</strong> <span>10 Iyul 2007</span></li>
                                     <li><i class="bi bi-chevron-right"></i> <strong>Telegram:</strong> <span>@damirshakh</span></li>
                                     <li><i class="bi bi-chevron-right"></i> <strong>WatsApp:</strong> <span>+996 259 759</span></li>
-                                    <li><i class="bi bi-chevron-right"></i> <strong>Shahar:</strong> <span>Pnza Rossiya</span></li>
+                                    <li><i class="bi bi-chevron-right"></i> <strong>Shahar:</strong> <span>Penza Rossiya</span></li>
                                 </ul>
                             </div>
                             <div class="col-lg-6">
@@ -126,7 +126,7 @@
                             </div>
                         </div>
                         <p class="py-3">
-                            Men hozirgi kunda Penza Davlat Universitetining 1-kurs talabasiman. Men daasturlashga va treyderlikka, ya'niy onlayn savdoga qiziqaman. Menda bu sohalar bo'yicha boshlan'ich ta'im bor.
+                            Men hozirgi kunda Penza Davlat Universitetining 1-kurs talabasiman. Men dasturlashga va treyderlikka, ya'niy onlayn savdoga qiziqaman. Menda bu sohalar bo'yicha boshlan'ich ta'lim bor.
                         </p>
                     </div>
                 </div>
