--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
             <!-- Section Title -->
             <div class="container section-title" data-aos="fade-up">
-                <h2>men haqimda</h2>
+                <h2>Men haqimda</h2>
             </div>
             <!-- End Section Title -->
 
