--- a/index.html
+++ b/index.html
@@ -106,27 +106,27 @@
                         <img src="assets/img/my-profile-img.jpg" class="img-fluid" alt="">
                     </div>
                     <div class="col-lg-8 content">
-                        <h2>PGU Student; Web Developer.</h2>
+                        <h2>PSU Student; Web Developer.</h2>
                         <div class="row">
                             <div class="col-lg-6">
                                 <ul>
                                     <li><i class="bi bi-chevron-right"></i> <strong>Tug'ilgan kun:</strong> <span>10 Iyul 2007</span></li>
                                     <li><i class="bi bi-chevron-right"></i> <strong>Telegram:</strong> <span>@damirshakh</span></li>
-                                    <li><i class="bi bi-chevron-right"></i> <strong>WatsApp:</strong> <span>+996 259 759</span></li>
+                                    <li><i class="bi bi-chevron-right"></i> <strong>WatsApp:</strong> <span>+996 220 259 759</span></li>
                                     <li><i class="bi bi-chevron-right"></i> <strong>Shahar:</strong> <span>Penza Rossiya</span></li>
                                 </ul>
                             </div>
                             <div class="col-lg-6">
                                 <ul>
-                                    <li><i class="bi bi-chevron-right"></i> <strong>Yosh:</strong> <span>17</span></li>
-                                    <li><i class="bi bi-chevron-right"></i> <strong>Daraja:</strong> <span>Boshlang'ich</span></li>
+                                    <li><i class="bi bi-chevron-right"></i> <strong>Yosh:</strong> <span>18</span></li>
+                                    <li><i class="bi bi-chevron-right"></i> <strong>Daraja:</strong> <span>O'rtacha</span></li>
                                     <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>damirshokh@gmail.com</span></li>
                                     <li><i class="bi bi-chevron-right"></i> <strong>Instagram:</strong> <span>@dam1r.shah_02</span></li>
                                 </ul>
                             </div>
                         </div>
                         <p class="py-3">
-                            Men hozirgi kunda Penza Davlat Universitetining 1-kurs talabasiman. Men dasturlashga va treyderlikka, ya'niy onlayn savdoga qiziqaman. Menda bu sohalar bo'yicha boshlan'ich ta'lim bor.
+                            Men hozirgi kunda Penza Davlat Universitetining 1-kurs talabasiman. Men dasturlashga va treyderlikka, ya'niy onlayn savdoga qiziqaman. Menda bu sohalar bo'yicha yetarli ta'lim bor.
                         </p>
                     </div>
                 </div>
@@ -145,7 +145,7 @@
             <!-- Section Title -->
             <div class="container section-title" data-aos="fade-up">
                 <h2>Rezyumi</h2>
-                <p>Men Abdinayimov Damirbek Sheralievich 2007-yil 10-iyulda Qig'izston davlatining Batken oblastigadi Oqsuv qishlog'ida tug'ilganman. </p>
+                <p>Men Abdinayimov Damirbek Sheralievich 2007-yil 10-iyulda Qirg'iziston davlatining Batken viloyatidagi Oqsuv qishlog'ida tug'ilganman. </p>
             </div>
             <!-- End Section Title -->
 
@@ -156,15 +156,7 @@
                     <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
                         <h3 class="resume-title">Oilam</h3>
 
-                        <div class="resume-item pb-0">
-                            <ul>
-                                <li>Joroev Sherali Abdinayimovich 15.08.1982.y.</li>
-                                <li>Aminova Gulshoda Abdiganiyevna 03.12.1984.y.</li>
-                                <li>Abdinayimov Shamshodbek Sheralievich 12.11.2005.y.</li>
-                                <li>Abdinayimov Hasanjon Sheralievich 22.04.2012.y.</li>
-                                <li>Abdinayimov Husanjon Sheralievich 22.04.2012.y.</li>
-                            </ul>
-                        </div>
+                        Malumot homoyalangan!!
                         <!-- Edn Resume Item -->
 
                         <h3 class="resume-title">Ta'lim</h3>
@@ -249,7 +241,7 @@
                                 <img src="assets/img/portfolio/men-1.png" class="img-fluid" alt="">
                                 <div class="portfolio-info">
                                     <h4>men 1</h4>
-                                    <a href="assets/img/portfolio/men-1.png" title="men 1" data-gallery="portfolio-gallery-men" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                                    <a href="assets/img/portfolio/men-1.png" title="men" data-gallery="portfolio-gallery-mn" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                                     <a href="portfolio-details.html" title="More Details" class="details-link"></a>
                                 </div>
                             </div>
@@ -297,7 +289,7 @@
                                 <img src="assets/img/portfolio/men-2.png" class="img-fluid" alt="">
                                 <div class="portfolio-info">
                                     <h4>men 2</h4>
-                                    <a href="assets/img/portfolio/men-2.png" title="men 2" data-gallery="portfolio-gallery-men" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                                    <a href="assets/img/portfolio/men-2.png" title="men" data-gallery="portfolio-gallery-mn" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                                     <a href="portfolio-details.html" title="More Details" class="details-link"></a>
                                 </div>
                             </div>
@@ -345,7 +337,7 @@
                                 <img src="assets/img/portfolio/men-3.png" class="img-fluid" alt="">
                                 <div class="portfolio-info">
                                     <h4>men 3</h4>
-                                    <a href="assets/img/portfolio/men-3.png" title="men 3" data-gallery="portfolio-gallery-men" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                                    <a href="assets/img/portfolio/men-3.png" title="men 3" data-gallery="portfolio-gallery-mn" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                                     <a href="portfolio-details.html" title="More Details" class="details-link"></a>
                                 </div>
                             </div>
@@ -378,14 +370,14 @@
 
         <div class="container">
             <div class="copyright text-center ">
-                <p>© <span>Copyright</span> <strong class="px-1 sitename">iPortfolio</strong> <span>All Rights Reserved</span></p>
+                <p>© <span>Shakh</span> <strong class="px-1 sitename">iPortfolio</strong> <span></span></p>
             </div>
             <div class="credits">
                 <!-- All the links in the footer should remain intact. -->
                 <!-- You can delete the links only if you've purchased the pro version. -->
                 <!-- Licensing information: https://bootstrapmade.com/license/ -->
                 <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-                Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+                To'liqroq malumot <a href="bio.site/damirshakh">BootstrapMade</a>
             </div>
         </div>
 
